--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,8 +3,18 @@
 // VARIABLES
 //
 
+
+//Kuler Colors
+$backgroundGrey: #202020;
+$lightBlue: #4478A1;
+$darkBlue: #0D436E;
+$teal: #6FD4CB;
+$peach: #D9B0A8;
+$red: #A11713;
+
 // Colors
 $blue: #4183C4;
+
 
 // Grays
 $black: #000;
