--- a/style.scss
+++ b/style.scss
@@ -152,7 +152,7 @@ img {
 
 .wrapper-masthead {
   margin-bottom: 50px;
-  background: $lightGray;
+  background: $backgroundGrey;
 }
 
 .masthead {
