--- a/style.scss
+++ b/style.scss
@@ -193,7 +193,7 @@ img {
 
 .site-name {
   margin: 0;
-  color: $darkGray;
+  color: $white;
   cursor: pointer;
   font-family: $helveticaNeue;
   font-weight: 300;
@@ -209,6 +209,11 @@ img {
   @include mobile {
     margin: 3px 0;
   }
+}
+
+.site-nave {
+  color: $white;
+	
 }
 
 nav {
